# pst-os

./: .gitignore  BUGS.md  CHARTS.md  Cargo.toml  DECK.md  DIAGRAM-GRID.md  GRID-PLACER.md  OUTCONCEIVE-PORT.md  PARALLAX.md  README.md  ROADMAP.md  SPREADSHEET.md  TABLE.md  TRANSITIONS.md  VGA-REMAINING.md  VISION.md  run-pst-win.bat  run-pst.sh  rust-toolchain.toml  snap-watch.py
.github/workflows/: docs.yml
bare-metal/: .gitignore  Cargo.toml
bare-metal/.cargo/: config.toml
bare-metal/userspace/: link.ld
bare-metal/userspace/bindings/sel4-sys/: Cargo.toml
bare-metal/userspace/bindings/sel4-sys/src/: lib.rs  native.rs
bare-metal/userspace/cryptod/: Cargo.toml
bare-metal/userspace/cryptod/src/: main.rs
bare-metal/userspace/desktop/compositor/: Cargo.toml
bare-metal/userspace/desktop/compositor/src/: main.rs
bare-metal/userspace/desktop/shell/: Cargo.toml
bare-metal/userspace/desktop/shell/src/: main.rs
bare-metal/userspace/driverd/: Cargo.toml
bare-metal/userspace/driverd/src/: main.rs
bare-metal/userspace/drivers/gpu/: Cargo.toml
bare-metal/userspace/drivers/gpu/src/: main.rs
bare-metal/userspace/drivers/nic/: Cargo.toml
bare-metal/userspace/drivers/nic/src/: main.rs
bare-metal/userspace/drivers/nvme/: Cargo.toml
bare-metal/userspace/drivers/nvme/src/: main.rs
bare-metal/userspace/drivers/usb/: Cargo.toml
bare-metal/userspace/drivers/usb/src/: main.rs
bare-metal/userspace/init/: Cargo.toml  build.rs
bare-metal/userspace/init/src/: main.rs
bare-metal/userspace/libprivos/: Cargo.toml
bare-metal/userspace/libprivos/src/: allocator.rs  elf.rs  initrd.rs  ioport.rs  ipc.rs  irq.rs  lib.rs  mem.rs  panic.rs  process.rs  vm.rs
bare-metal/userspace/netd/: Cargo.toml
bare-metal/userspace/netd/src/: main.rs
bare-metal/userspace/pst-bridge/: Cargo.toml
bare-metal/userspace/pst-bridge/src/: lib.rs
bare-metal/userspace/pst-init/: Cargo.toml  build.rs
bare-metal/userspace/pst-init/src/: browser.rs  codeview.rs  convergence.rs  desktop.rs  editor.rs  gui_input.rs  input.rs  keyboard.rs  main.rs  mouse.rs  net.rs  ps2.rs  rng.rs  sel4_shims.rs  shell.rs  storage.rs  storybook.rs  vga.rs  vgacon.rs
bare-metal/userspace/vfs/: Cargo.toml
bare-metal/userspace/vfs/src/: main.rs
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: components.md  constraints.md  events.md  markout.md  styles.md  validation.md
docs/architecture/: interaction.md  overview.md  paper.md  parallel-strings.md  rendering.md  sel4.md
docs/guide/: browser.md  components.md  config.md  containers.md  desktop.md  editor.md  first-markout.md  getting-started.md  grid.md  lists.md  parametric.md  persistence.md  state.md  styles.md  validation.md
libpst/: Cargo.toml
libpst/src/: concurrent.rs  constraint.rs  lib.rs  offset.rs  solver.rs  table.rs
paper/: pst-os.tex  references.bib
proctable/: Cargo.toml  rustc-ice-2026-04-24T17_55_40-675.txt
proctable/src/: lib.rs
pst-blk/: Cargo.toml
pst-blk/src/: block.rs  lib.rs  virtio.rs
pst-book/: PST_Chapter1_Introduction.md  PST_Chapter2_HardQuestions.md  PST_Chapter3_FormalFoundation.md  PST_Chapter4_FromMetalToPrimitive.md  PST_Chapter5_QualityOracle.md  PST_Chapter6_SixAssumptions.md  PST_Chapter7_TheDismantling.md  PST_Chapter8_OpenFrontier.md
pst-editor/: Cargo.toml
pst-editor/src/: cursor.rs  document.rs  history.rs  lib.rs  line.rs  toolbar.rs
pst-editor/src/styles/: block.rs  inline.rs  mod.rs
pst-framebuffer/: Cargo.toml
pst-framebuffer/src/: font.rs  lib.rs
pst-integration/: Cargo.toml
pst-integration/src/: lib.rs
pst-ipc/: Cargo.toml
pst-ipc/src/: lib.rs
pst-markout/: Cargo.toml
pst-markout/src/: chart.rs  deck.rs  diagram.rs  grid.rs  html.rs  lib.rs  parallax.rs  parse.rs  render.rs  serial.rs  sheet.rs  state.rs  table.rs  transition.rs  vnode.rs  wasm.rs
pst-mem/: Cargo.toml
pst-mem/src/: lib.rs
pst-offset/: Cargo.toml
pst-offset/src/: lib.rs
pst-sched/: Cargo.toml
pst-sched/src/: lib.rs
pst-terminal/: Cargo.toml
pst-terminal/src/: ansi.rs  lib.rs
pst-time/: Cargo.toml
pst-time/src/: lib.rs
pst-ui/: Cargo.toml
pst-ui/src/: lib.rs
pst-vfs/: Cargo.toml
pst-vfs/src/: lib.rs
pst-watchdog/: Cargo.toml
pst-watchdog/src/: lib.rs
