[workspace]
resolver = "2"

members = [
    "libpst",
    "proctable",
    "pst-vfs",
    "pst-ipc",
    "pst-sched",
    "pst-watchdog",
    "pst-mem",
    "pst-offset",
    "pst-markout",
    "pst-time",
    "pst-framebuffer",
    "pst-terminal",
    "pst-integration",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
