[package]
name = "cryptod"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cryptod"
path = "src/main.rs"

[dependencies]
sel4-sys = { path = "../bindings/sel4-sys" }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
x25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.3", default-features = false }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# libprivos added in Phase 3+ when cryptod logic is implemented
