[package]
name = "init"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "init"
path = "src/main.rs"

[dependencies]
# Enable global-allocator so libprivos installs the #[global_allocator] and
# #[panic_handler] for this binary. Must be enabled in exactly one crate.
libprivos = { path = "../libprivos", features = ["global-allocator"] }
sel4-sys  = { path = "../bindings/sel4-sys" }
