[package]
name = "libprivos"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4-sys = { path = "../bindings/sel4-sys" }
bitflags = "2.4"
# Heap allocator for no_std. Used by the global allocator in alloc.rs.
# Must be initialized before any alloc::* usage (done in init/_start).
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }

[features]
default = ["alloc", "global-allocator"]
alloc = []
# Enable this in binary crates (init, vfs, etc.) to install the global allocator.
# Must be enabled in exactly one crate per binary.
global-allocator = []
