[package]
name = "netd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netd"
path = "src/main.rs"

[dependencies]
sel4-sys = { path = "../bindings/sel4-sys" }
x25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
# libprivos added in Phase 7 when netd logic is implemented
