[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vfs"
path = "src/main.rs"

[dependencies]
sel4-sys = { path = "../bindings/sel4-sys" }
chacha20poly1305 = { version = "0.10", default-features = false }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# libprivos added in Phase 7+ when heap allocation is needed
